Addressed issues for misaligned overlays.

--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -23,6 +23,7 @@ img {
 
 .trigger-holder {
 	position: relative;
+	overflow: hidden;
 }
 
 .trigger-overlay {
